Agrega todas las tareas hasta la clase 4

--- a/tareas/clase-1/index.html
+++ b/tareas/clase-1/index.html
@@ -3,10 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>r/Argentina programa | Intro a JavaScript | Tarea Clase 1</title>
+    <title>r/Argentina Programa | Intro a JavaScript | Tarea Clase 1</title>
 </head>
 
 <body>
-<script src="tarea-clase-1.js"></script>
+    <script src="tarea-clase-1.js"></script>
 </body>
+
 </html>
