--- a/tareas/clase-2/index.html
+++ b/tareas/clase-2/index.html
@@ -3,10 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>r/Argentina programa | Intro a JavaScript | Tarea Clase 2</title>
+    <title>r/Argentina Programa | Intro a JavaScript | Tarea Clase 2</title>
 </head>
 
 <body>
-<script src="tarea-clase-2.js"></script>
+    <script src="tarea-clase-2.js"></script>
 </body>
+
 </html>
