--- a/tareas/clase-4/index.html
+++ b/tareas/clase-4/index.html
@@ -3,10 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>r/Argentina programa | Intro a JavaScript | Tarea Clase 4</title>
+    <title>r/Argentina Programa | Intro a JavaScript | Tarea Clase 4</title>
 </head>
 
 <body>
-<script src="tarea-clase-4.js"></script>
+    <script src="tarea-clase-4.js"></script>
+    <script src="tarea-clase-4-algoritmos.js"></script>
 </body>
+
 </html>
