--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>r/Argentina programa | Intro a JavaScript</title>
+  <title>r/Argentina Programa | Intro a JavaScript</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=GFS+Didot">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200">
   <link rel="stylesheet" href="css/main.css">
@@ -15,12 +15,25 @@
     <h2>Escribamos un poco de código el día de hoy!</h2>
   </header>
 
+  <section>
+    <form>
+      <input id="nombre-usuario" type="text" placeholder="Ingrese su nombre">
+      <input id="edad-usuario" type="number" placeholder="Ingrese su edad">
+      <button id="ingresar" type="submit">Ingresar</button>
+    </form>
+
+    <div id="resultado"></div>
+  </section>
+
   <main>
     <div>
-      <p>En <a href="https://www.google.com/chrome/">Chrome</a> y <a href="https://www.mozilla.org/en-GB/firefox/new/">Firefox</a>,
-        para abrir la <i>Consola del navegador</i>, click derecho en esta página y seleccionen <i>'Inspect'</i>. La consola va a aparecer
-          abajo o a la derecha de la pantalla.
-      <p>Si estás listos para probar un atajo del teclado, apretá <i>'<abbr title="Command">CMD</abbr>+<abbr title="Option">OPT</abbr>+J'</i>
+      <p>En <a href="https://www.google.com/chrome/">Chrome</a> y <a
+          href="https://www.mozilla.org/en-GB/firefox/new/">Firefox</a>,
+        para abrir la <i>Consola del navegador</i>, click derecho en esta página y seleccionen <i>'Inspect'</i>. La
+        consola va a aparecer
+        abajo o a la derecha de la pantalla.
+      <p>Si estás listos para probar un atajo del teclado, apretá <i>'<abbr title="Command">CMD</abbr>+<abbr
+            title="Option">OPT</abbr>+J'</i>
         en Mac, ó <i>'F12'</i> en Windows</p>
     </div>
 
@@ -33,8 +46,9 @@
     <div>
       <ul>
         <li class="website">
-            <span>GitHub</span>
-            <a href="https://github.com/r-argentina-programa/introduccion-a-js" target="_blank">github.com/r-argentina-programa</a>
+          <span>GitHub</span>
+          <a href="https://github.com/r-argentina-programa/introduccion-a-js"
+            target="_blank">github.com/r-argentina-programa</a>
         </li>
       </ul>
     </div>
@@ -69,6 +83,7 @@
     </div>
   </footer>
 
-  <script src="js/nivel1.js"></script>
+  <script src="js/nivel3.js"></script>
 </body>
+
 </html>
